[package]
name = "generative_art"
version = "0.1.0"
authors = ["Luca <mail@photon.garden>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
nannou = "0.18"
fs_extra = "1.2.0"
chrono = "0.4"
nanorand = "0.7.0"
contour = "0.1.0"
itertools = "0.10.1"
geo = "0.23.0"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
pigment-mixing = { git = "https://github.com/virtualritz/pigment-mixing-rs" }
markov = "1.1.0"
rayon = "1.5.3"
tap = "1.0.1"
duct = "0.13.5"
arraymap = "0.1.1"
ordered-float = "3.0.0"
fast_poisson = { version = "0.5.2", features = ["single_precision"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spade = "2.0.0" # Delaunay triangulation.
flat_spatial = "0.5.0"

[dev-dependencies]

criterion = "0.3"
flamegraph = "0.6.1"

[profile.release]
# debug = false
debug = true
incremental = true
